--- a/styles/subscribe.css
+++ b/styles/subscribe.css
@@ -9,6 +9,7 @@
     background: url(../images/subscribe/blue-orange.png);
     background-repeat: no-repeat;
     background-position: center center;
+    border-radius: 30px;
 }
 
 .subscribe__title {
@@ -65,7 +66,10 @@
         align-items: center;
         gap: 20px;
     }
-    
+
+    .inner-subscribe {
+        padding: 0;
+    }
 }
 
 @media (max-width: 555px) {
@@ -76,10 +80,10 @@
     }
 
     .subscribe__email {
-        padding: 26px 30px 27px 30px;
-        width: 300px;
+        padding: 26px 30px 26px 30px;
+        width: 290px;
+        height: 70px;
     }
-    
 }
 
 @media (max-width: 555px) {
@@ -92,6 +96,5 @@
         font-size: 30px;
         text-align: center;
         line-height: 35px;
-
     }
 }
